2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/sendbackup-gnutar.c (end_backup): Write warning message
	  in not fatal error.
	* server-src/dumper.c (process_dumpline): Parse warning message.
	* server-src/reporter.c (handle_strange): Print warning message in
	  the STRANGE summary.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driverio.c (free_serial): Set stable[s].dp to NULL.
	* server-src/driverio.c (disk2serial): Check that stable[s].dp == NULL.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Joe Rhett <jrhett@isite.net>

	* common-src/alloc.c (safe_env): Keep SYSTEMROOT if __CYGWIN__.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Orion Poplawski <orion@cora.nwra.com>

	* server-src/conffile.c (copy_dumptype): Copy maxpromoteday.

2004-08-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/selfcheck.c (check_disk): More check for CALCSIZE.

2004-08-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/amfeatures.h (fe_selfcheck_calcsize): New feature.
	* common-src/amfeatures.c (am_init_feature_set): Set
	  fe_selfcheck_calcsize.
	* client-src/selfcheck.c: Check if calcsize binary is available if
	  it is needed.
	* server-src/amcheck.c (start_host): Call selfcheck with CALCSIZE
	  if it support fe_selfcheck_calcsize.

2004-08-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* man/amanda.8.in: Document 'estimate' dumptype option.

2004-08-04  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amrmtape.sh.in: Understand history info.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c: Typo.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Parse CONTINUE and RQ-MORE-DISK line,
	  print if a dump is waiting for holding disk space (roomq).

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
